p12134 Code format, cleanup.